placed team member header in full-width layout, to fix broken layout

--- a/src/main/stylesheets/team.css.scss
+++ b/src/main/stylesheets/team.css.scss
@@ -17,10 +17,6 @@ $icon-sprite: url("../img/iconsprite.png");
 
 
 .team-map--wrapper {
-  position: absolute;
-  top: 74px;
-  left: 0;
-  right: 0;
   #map {
     height: 425px;
     border-bottom: 1px solid $black-brown;
